# CMakeProjectFramework

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_for_linux.sh  build_for_mac.sh  build_for_win_vs2019-x64.bat
cmake/: AddLibrary.cmake  BaseMacroAndFunc.cmake  CMakeProjectFrameworkConfig.cmake  CMakeProjectFrameworkConfigVersion.cmake  CompileOptions.cmake  DetectEnvironment.cmake  InstallFunc.cmake  common_func.cmake  compile_link_options.cmake  toolchain.cmake
config/: CMakeProjectFrameConfig.cmake  CMakeProjectFrameConfigVersion.cmake  CMakeProjectFrameworkConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/: cuda_algo.h  cuda_algo.hpp
src/: CMakeLists.txt  cuda_algo.cpp  cuda_algo.cu
src/ExportAbstractClass/: AbstractClassInterface.cpp  AbstractClassInterface.h  ExportClass.cpp  ExportClass.h  IExportAbstractClass.h
src/ExportC/: CInterface.cpp  CInterface.h
src/ExportClass/: ClassInterface.cpp  ClassInterface.h
src/ExportCplus/: CplusInterface.cpp  CplusInterface.h
src/Impl/: Impl.cpp  Impl.h
src/common/: BaseInclude.h  ExportMarco.h  SysInclude.h  filesystem.hpp
src/demo/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  IAlgorithm.cpp  IAlgorithm.h
src/lib-impl/: Algorithm.h
test/: CMakeLists.txt  TestAbstractClass.cpp  TestAlgorithm.cpp  TestC.cpp  TestClass.cpp  TestCplus.cpp  TestDemo.cpp
